force-app/main/default/objects/SalesCadenceStepTrackerEvent__e/SalesCadenceStepTrackerEvent__e.object-meta.xml
<CustomObject>
    <label>Sales Cadence Step Tracker Event</label>
    <pluralLabel>Sales Cadence Step Tracker Events</pluralLabel>
</CustomObject>