force-app/main/default/objects/SalesCadenceStepTrackerEvent__e/fields/CadenceStepId__c.field-meta.xml
<CustomField>
    <fullName>CadenceStepId__c</fullName>
    <label>Cadence Step Id</label>
    <length>18</length>
    <required>true</required>
    <type>Text</type>
</CustomField>