force-app/main/default/objects/SalesCadenceStepTrackerEvent__e/fields/StepTitle__c.field-meta.xml
<CustomField>
    <fullName>StepTitle__c</fullName>
    <label>Step Title</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>