force-app/main/default/objects/SalesCadenceStepTrackerEvent__e/fields/StepTrackerId__c.field-meta.xml
<CustomField>
    <fullName>StepTrackerId__c</fullName>
    <label>Step Tracker Id</label>
    <length>18</length>
    <required>true</required>
    <type>Text</type>
</CustomField>