force-app/main/default/objects/SalesCadenceStepTrackerEvent__e/fields/StepType__c.field-meta.xml
<CustomField>
    <fullName>StepType__c</fullName>
    <label>Step Type</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>